[FIXED]: fixed base color and notification toast's z-index

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,6 @@
 :root {
   /* --base-color: #edeec9; */
   --base-color: #e8eec9;
-  --base-nav-color: #e8e7e3;
   --card-color: #3b6548;
   /* --card-color: #25512e; */
   /* --card-color: #4a7c59; */
